--- a/views/item_detail.pug
+++ b/views/item_detail.pug
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= `${title}` 
-  p test
+  p Price: #{item.price}
+  p #{item.quantity} of #{item.name} available.
