Add form create function, submission to database

--- a/views/catalog_items.pug
+++ b/views/catalog_items.pug
@@ -22,3 +22,6 @@ block content
           span(style="color: green") In Stock
         else if item.quantity===0
           span(style="color: red") Out of Stock
+
+        | - Update
+        | - Delete
