--- a/views/item_create.pug
+++ b/views/item_create.pug
@@ -3,29 +3,31 @@ extend layout
 block content
     h1 Add an Item 
     
-    form(action="", method="POST")
+    if errors
+        p Try Again and fix the errors!
+        each error in errors
+            p #{error}
+
+    form(action="/catalog/item/create", method="POST") 
         label(for="name") Item Name:
-        input(id="name", type="text", name="name")
+        input(id="name", type="text", name="name", required='true')
 
         br
 
         label(for="price") Item Price:
-        input(id="price", type="number", name="price")
+        input(id="price", type="number", name="price", required='true')
 
         br
 
         label(for="quantity") Quantity:
-        input(id="quantity" type="number", name="quantity")
+        input(id="quantity" type="number", name="quantity", required='true')
 
         br
 
         label(for="category") Item Category:
         select(id="category" name="category")
-            option(value="cpu") CPU Processors
-            option(value="case") Computer Cases
-            option(value="gpu") Graphics Cards
-            option(value="ram") Memory (RAM)
-            option(value="mb") Motherboards
-            option(value="cooler") PC Coolers
-            option(value="psu") Power Supplies
-            option(value="storage") Storage
+            for cat in categories
+                option(value=cat._id) #{cat.name}
+        br
+
+        button(type="submit") Submit
